...
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ubusetas.ubu.adrian.proyectoubusetas.clavedicotomica.ClaveDicotomica"
    tools:showIn="@layout/layout_clave_dicotomica">

    <TextView
        android:id="@+id/TextView_ClaveMostrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/TextView_Pregunta_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView_ClaveMostrada"
        android:layout_marginTop="20dp"
        android:text="@string/texto_pregunta"
        android:textColor="@color/black" />

    <ListView
        android:id="@+id/listView_claveDicotomica"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_below="@id/TextView_Pregunta_clave"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/boton_anterior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@android:drawable/ic_menu_revert" />
...
