...
        layout="@layout/layout_lanzadora"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--Parte del menu -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/encabezado_menu"
        app:menu="@menu/menu" />
...
